# mynote

./: .editorconfig  .gitignore  .gitmodules  README.md  _config.yml  题解.md
c-c++/unix-progranmming/: CMakeLists.txt
c-c++/unix-progranmming/hello/: hello_world.c
c-c++/unix-progranmming/ipc/: pipe.c  signal.cpp
c-c++/unix-progranmming/proc/: fork.c  wait.c
c-c++/unix-progranmming/sche/: sche.c
c-c++/unix-progranmming/socket/: client.c  server.c
data-structure-and-algorithm/: README.md  go.mod  go.sum
data-structure-and-algorithm/basic/: README.md  sorting.md
data-structure-and-algorithm/common/: ListNode.java  TreeNode.java  TreeNode.py
data-structure-and-algorithm/jian-zhi-offer/: 04.find_number_in_2d_array.md  05.replace_space.md  06.reverse_print.md  10-2.-qing-wa-tiao-tai-jie-wen-ti.md  50.first_uniq_char.md  62.last_remaining.md  63.max_profit.md  64.sum_nums.md  65.add.md  68.lowest_common_ancestor_binary_search_tree.md  68.lowest_common_ancestor_binary_tree.md  README.md
data-structure-and-algorithm/leetcode/: 0426.convert-binary-search-tree-to-sorted-doubly-linked-list  README.md
go/: README.md
grpc/grpc-demo/: README.md
java/: compile_openjdk11_on_mac.md  java_util_hashmap.md  pass_by_value.md
jvm/: README.md
kafka/: README.md  kafka_cluster.md
kubernetes/: README.md  k3s.md
linux/: user_management.md
mysql/: README.md  innodb.md  sql_optimization.md
network/: README.md
operating-system/: README.md  user_management.md
python/: basic.md  global_interpreter_lock.md
system-design/: c10k.md
vm/: Vagrantfile
(+517 files in other folders)
